--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ body {
   --white: #fff;
   --limeGreen: #1DD55F;
   --mediumBlue: #1D75DE;
-  --padding1: 1.5%;
+  --mediumGrey: #EFEFEF;
+  --padding1: 0 1.5%;
 }
+
 
