--- a/src/components/Buttons/Buttons.css
+++ b/src/components/Buttons/Buttons.css
@@ -1,11 +1,23 @@
-.btn {
+.btn, .primary, .secondary, .primary-wide {
     border: none;
-    border-radius: 50px;
-    padding: 1.3% 2.3%;
+    border-radius: 500px;
+    height: 3.2rem;
+    width: 10rem;
     margin-left: 1%;
     cursor: pointer;
-    background-color: var(--black);
     color: var(--white);
     font-size: 0.8rem;
     font-weight: 600;
 }
+.primary, .primary-wide {
+    background-color: var(--black);
+}
+.secondary {
+    background-color: transparent;
+    border: 2px solid var(--white);
+}
+.primary-wide {
+    width: 15rem;
+}
+
+
