--- a/src/components/Header/LandingPageHeader/LandingPageHeader.css
+++ b/src/components/Header/LandingPageHeader/LandingPageHeader.css
@@ -1,12 +1,24 @@
 .header-wrapper {
     background-color: var(--black);
     height: 5rem;
-    max-width: 100%;
+    min-width: 20rem;
 }
 .header {
-    max-width: 80%;
+    width: 80%;
     margin: 0 auto;
+    padding: 0.8rem 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.hamburger-icon {
+    color: var(--white);
+    display: none;
+    cursor: pointer;
+}
+@media (max-width:990px) {
+    .hamburger-icon {
+        display: block;
+        font-size: 1.7rem;
+    }
 }
