--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
   --limeGreen: #1DD55F;
   --mediumBlue: #1D75DE;
   --mediumGrey: #EFEFEF;
+  --lightGrey: #D9DADC;
+  --lightGrey2: #cccccc;
+
   --padding1: 0 1.5%;
 }
 
