--- a/src/components/Features/Features.module.css
+++ b/src/components/Features/Features.module.css
@@ -2,6 +2,7 @@
     width: 80%;
     margin: auto;
     padding: 4rem;
+    font-family: 'Helvetica', 'Arial';
 }
 .featuresTitle {
     font-weight: 700;
