--- a/src/components/LoginPage/LoginPage.module.css
+++ b/src/components/LoginPage/LoginPage.module.css
@@ -2,25 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: ;
+    font-family: "Inter", "Arial", "Helvetica Neue";
+    font-weight: 700;
 }
 .header {
     border-bottom: 1px solid var(--lightGrey);
     width: 100%;
     padding: 1rem 0;
 }
-.logo {
-    
-}
 .loginFormWrapper {
-    padding: 2rem 0;
+    padding: 2% 0;
 }
-
 .loginForm {
     width: 28rem;
-}
-.continue {
-    
 }
 .facebookBtn, .appleBtn, .googleBtn {
     width: 100%;
@@ -30,6 +24,13 @@
     margin-bottom: 2%;
     width: 28rem;
     height: 3rem;
+    cursor: pointer;
+    opacity: 0.9;
+    transition: all 0.3s ease-in-out;
+}
+.facebookBtn:hover, .appleBtn:hover, .googleBtn:hover {
+    opacity: 1;
+    transform: scale(1.01);
 }
 .facebookBtn {
     background-color: var(--mediumBlue);
@@ -47,37 +48,143 @@
 .googleIcon {
     padding: 1.8%;
     border-radius: 3px;
-    box-shadow: 0px 2px 3px 0px #cccccc;
+    box-shadow: 0px 2px 3px 0px var(--lightGrey);
     font-size: 1.3rem;
 }
 .googleBtn {
-    border: 1px solid black;
+    border: 1px solid var(--lightGrey3);
     margin-bottom: 3%;
 }   
 .googleText {
-    color: grey;  
+    color: var(--lightGrey4);  
 }
 .btnText {
     font-size: 0.9rem;
     text-transform: uppercase;
     letter-spacing: 1.5px;
     padding-left: 3%;
+    font-family: 'inter', 'Arial';
+}
+.divider {
+    height: 0rem;
+    border: 1px solid var(--lightGrey);
+    width: 100%; 
+    text-align: center;
+    line-height: 0;
+    margin: 3% 0;
 }
 .divider span {
+    background-color: var(--white);
+    font-size: 1rem;
+    font-weight: 700;
+    padding: 5%;
+}
+
+/* .divider span {
     display: flex;
     gap: 0.5rem;
-}
-.divider span::before {
-    
+    font-size: 0.9rem;
 }
 .divider span::before, 
 .divider span::after {
     content: "";
     flex: 1 1; 
     border-bottom: 2px solid var(--lightGrey); 
-    margin: auto;
-    
-}
+    margin: auto; 
+} */
 .form {
     border-bottom: 2px solid var(--lightGrey);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 5% 0;
+    margin-bottom: -1.5%;
 }
+.usernameLabel, .passwordLabel {
+    font-size: 0.8rem;
+}
+.username, .passwordWrapper, .password {
+    width: 95%;
+    border-radius: 4px;
+}
+.username, .password {
+    padding: 2%;
+    margin: -2% 0;
+    border-radius: 4px;
+    border: 1px solid var(--lightGrey3);
+    height: 1.5rem;
+}
+.passwordWrapper {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 100%;
+}
+.hide {
+    color: var(--lightGrey3);
+    font-size: 1.7rem;
+    position: absolute;
+    right: 1rem;
+    
+}
+.forgotPass {
+    margin: 1% 0;
+}
+.forgotPass a {
+    font-family: 'Helvetica', 'Arial';
+    color: var(--black);
+    font-weight: 400;
+}
+.login {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+.rememberMe {
+    display: flex;
+    align-items: center;
+}
+.remember {
+    margin-right: 1rem;
+}
+.remember[type="checkbox"] {
+    width: 1rem;
+    height: 1rem;
+}
+.remember:checked {
+    accent-color: var(--limeGreen);
+}
+.loginBtn {
+    background-color: var(--lightGreen);
+    color: var(--black);
+    width: 7.5rem;
+    height: 3rem;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+}
+.signupTxt {
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 2.8;
+}
+.signupBtn {
+    border: 1px solid var(--lightGrey3);
+    color: var(--black); 
+    width: 100%;
+    height: 3rem;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    color: var(--lightGrey4);
+    letter-spacing: 1.5px;
+    margin: -3% 0;
+    transition: all 0.4s ease-in-out;
+}
+.signupBtn:hover {
+    transform: scale(1.02);
+}
+
+@media (max-width: 60px) {
+    
+}
+
