--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   --lightGrey2: #cccccc;
   --lightGrey3: #878787;
   --lightGrey4: #6A6A6A;
+  --mediumGrey2: #919496;
   --darkGrey: #535353;
   --darkGrey2: #222326;
   --lightGreen: #1ED760;
