--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,24 +11,27 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-.menuList {
-    
-}
-.title {
-    
+    width: 80%;
 }
 .topMenu {
     display: flex;
     gap: 2rem;
 }
-.menuCol {
+.menuWrapper {
+    width: 60%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
+}
+.menuCol {
+    width: 80%;
+}
+.title {
+    font-size: 0.75rem;
+    color: var(--mediumGrey2);
+    font-weight: 700;
 }
 .item {
-    padding-bottom: 20%;
+    padding-bottom: 30%;
 }
 .menuWrapper {
     display: flex;
@@ -43,7 +46,7 @@
     text-decoration: none;
 }
 .bottomMenu {
-
+    width: 70%;
 }
 .legalMenuWrapper {
     display: flex;
@@ -53,24 +56,43 @@
     list-style: none;
 }
 .legalItem a {
-    color: var(--white);
+    color: var(--mediumGrey2);
     text-decoration: none;
+    font-size: 0.75rem;
 }
 .copyrightsWrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-end; 
-     
+    align-items: flex-end;
+    width: 18%; 
 }
 .icons {
     display: flex;
     justify-content: space-between;
     width: 100%;
     cursor: pointer;
+    gap: 2%;
 }
 .icons svg {
     background-color: var(--darkGrey2);
-    padding: 8%;
+    padding: 10%;
     border-radius: 50%;
+}
+.copyrights {
+    width: 100%;
+    text-align: end;
+}
+.language {
+    font-size: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 6%;
+    color: var(--mediumGrey2);
+    width: 100%;
+}
+.date {
+    font-size: 0.9rem;
+    color: var(--mediumGrey2);
 }
