created login api fetching

--- a/src/components/LoginPage/LoginPage.module.css
+++ b/src/components/LoginPage/LoginPage.module.css
@@ -79,6 +79,14 @@
     font-weight: 700;
     padding: 5%;
 }
+.error {
+    text-align: center;
+    background-color:  #e91429;
+    color: var(--white);
+    padding: 10px;
+    margin-top: 8%;
+    border-radius: 18px;
+}
 
 /* .divider span {
     display: flex;
