finished dashboard sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,12 @@ body {
   --lightGrey3: #878787;
   --lightGrey4: #6A6A6A;
   --mediumGrey2: #919496;
+  --mediumGrey3: #B3B3B3;
   --darkGrey: #535353;
   --darkGrey2: #222326;
   --lightGreen: #1ED760;
+  --darkGrey3: #282828;
+  --darkGrey4: #181818;
 
 
 
